// ANIMAPS — Prisma schema draft (documentation only)
// Move to apps/api/prisma/schema.prisma when scaffolding the API.
// Evolution rules: docs/schema-evolution.md
// dbdiagram.io: paste docs/der.dbml (DBML) — do NOT paste this Prisma file.
// PostGIS: enable extension + GIST index on occurrences.location via raw SQL in migration.
//   CREATE EXTENSION IF NOT EXISTS postgis;
//   CREATE INDEX occurrences_location_gix ON occurrences USING GIST (location);

generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["postgresqlExtensions"]
}

datasource db {
  provider   = "postgresql"
  url        = env("DATABASE_URL")
  extensions = [postgis]
}

enum UserRole {
  guardian
  ngo
  clinic
  public_agency
  biologist
}

enum AvailableSpace {
  small_apartment
  large_apartment
  house_with_yard
  farm
}

enum AvailableTime {
  low
  moderate
  high
}

enum PreferredSize {
  small
  medium
  large
  any
}

enum PreferredSpecies {
  dog
  cat
  other
  any
}

enum AnimalSpecies {
  dog
  cat
  other
}

enum AnimalSize {
  small
  medium
  large
}

enum AnimalStatus {
  available
  in_process
  adopted
}

enum AdoptionStatus {
  requested
  under_review
  approved
  rejected
  completed
  cancelled
}

enum OccurrenceType {
  abandonment
  mistreatment
  vehicle_collision
  wildlife_sighting
  lost_animal
  found_animal
}

enum OccurrenceStatus {
  open
  in_progress
  resolved
  invalid
}

enum AuditAction {
  ngo_verified
  clinic_verified
  role_changed
  account_deleted
  data_exported
  occurrence_validated
}

enum OccurrenceReportReason {
  spam
  duplicate
  false_information
  inappropriate_content
}

/// Waitlist lead profile from `/register` step 1 — distinct from UserRole (product accounts).
/// Do not store passwords here; credentials belong on `User.passwordHash` when identity auth ships.
enum WaitlistProfileType {
  guardian
  ngo
  clinic
  other
}

enum ClientType {
  web
  mobile_ios
  mobile_android
  unknown
}

enum PushPlatform {
  ios
  android
}

/// Starter set aligned to bounded-context domain events — add values only.
enum NotificationType {
  user_registered
  ngo_verified
  clinic_verified
  adoption_requested
  adoption_completed
  animal_registered_for_matching
  new_compatible_animal_available
  occurrence_created
  occurrence_status_changed
  occurrence_resolved
  generic
}

model User {
  id              String    @id @default(uuid()) @db.Uuid
  name            String
  email           String    @unique
  /// Hashed credential for email/password register (UI: min 8, uppercase, special).
  /// Nullable for Google/OAuth — app rule: passwordHash OR external identity required.
  /// Never store plaintext; never put passwords on WaitlistEntry.
  passwordHash    String?   @map("password_hash")
  role            UserRole
  phone           String?
  city            String?
  state           String?
  lgpdConsent     Boolean   @default(false) @map("lgpd_consent")
  lgpdConsentAt   DateTime? @map("lgpd_consent_at")
  emailVerifiedAt DateTime? @map("email_verified_at")
  deletedAt       DateTime? @map("deleted_at")
  createdAt       DateTime  @default(now()) @map("created_at")
  updatedAt       DateTime  @updatedAt @map("updated_at")

  guardianProfile GuardianProfile?
  ngoProfile      NgoProfile?
  clinicProfile   ClinicProfile?

  animalsAsNgo           Animal[]               @relation("AnimalNgo")
  animalsAsGuardian      Animal[]               @relation("AnimalGuardian")
  animalsAsClinic        Animal[]               @relation("AnimalClinic")
  adoptionsAsGuardian    Adoption[]             @relation("AdoptionGuardian")
  adoptionsAsNgo         Adoption[]             @relation("AdoptionNgo")
  occurrences            Occurrence[]           @relation("OccurrenceAuthor")
  validatedOccurrences   Occurrence[]           @relation("OccurrenceValidator")
  occurrenceFollows      OccurrenceFollower[]
  notifications          Notification[]
  refreshTokens          RefreshToken[]
  emailVerificationTokens EmailVerificationToken[]
  passwordResetTokens    PasswordResetToken[]
  auditLogsAsActor       AuditLog[]             @relation("AuditActor")
  occurrenceReports      OccurrenceReport[]     @relation("OccurrenceReportAuthor")
  devicePushTokens       DevicePushToken[]

  @@index([deletedAt])
  @@map("users")
}

model GuardianProfile {
  userId                String            @id @map("user_id") @db.Uuid
  availableSpace        AvailableSpace?   @map("available_space")
  availableTime         AvailableTime?    @map("available_time")
  hasPreviousExperience Boolean           @default(false) @map("has_previous_experience")
  hasOtherPets          Boolean           @default(false) @map("has_other_pets")
  preferredSize         PreferredSize?    @map("preferred_size")
  preferredSpecies      PreferredSpecies? @map("preferred_species")
  isRescuer             Boolean           @default(false) @map("is_rescuer")
  taxId                 String?           @map("tax_id")
  updatedAt             DateTime          @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("guardian_profiles")
}

model NgoProfile {
  userId              String   @id @map("user_id") @db.Uuid
  companyTaxId        String   @map("company_tax_id")
  tradeName           String   @map("trade_name")
  serviceAreaRadiusKm Decimal? @map("service_area_radius_km") @db.Decimal(10, 2)
  serviceCapacity     Int?     @map("service_capacity")
  verified            Boolean  @default(false)
  updatedAt           DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("ngo_profiles")
}

model ClinicProfile {
  userId          String   @id @map("user_id") @db.Uuid
  companyTaxId    String   @map("company_tax_id")
  servicesOffered String[] @default([]) @map("services_offered")
  businessHours   String?  @map("business_hours")
  verified        Boolean  @default(false)
  updatedAt       DateTime @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@map("clinic_profiles")
}

model Animal {
  id            String        @id @default(uuid()) @db.Uuid
  ngoId         String?       @map("ngo_id") @db.Uuid
  guardianId    String?       @map("guardian_id") @db.Uuid
  clinicId      String?       @map("clinic_id") @db.Uuid
  name          String
  species       AnimalSpecies
  breed         String?
  estimatedAge  String?       @map("estimated_age")
  size          AnimalSize?
  temperament   String[]      @default([])
  healthHistory String?       @map("health_history")
  /// MVP: object-storage URLs. Promote to MediaAsset in a dedicated wave (see schema-evolution.md).
  photos        String[]      @default([])
  status        AnimalStatus  @default(available)
  deletedAt     DateTime?     @map("deleted_at")
  createdAt     DateTime      @default(now()) @map("created_at")
  updatedAt     DateTime      @updatedAt @map("updated_at")

  ngo       User?      @relation("AnimalNgo", fields: [ngoId], references: [id])
  guardian  User?      @relation("AnimalGuardian", fields: [guardianId], references: [id])
  clinic    User?      @relation("AnimalClinic", fields: [clinicId], references: [id])
  adoptions Adoption[]

  @@index([status])
  @@index([species, size])
  @@index([deletedAt])
  @@map("animals")
}

model Adoption {
  id                 String         @id @default(uuid()) @db.Uuid
  animalId           String         @map("animal_id") @db.Uuid
  guardianId         String         @map("guardian_id") @db.Uuid
  ngoId              String?        @map("ngo_id") @db.Uuid
  compatibilityScore Decimal?       @map("compatibility_score") @db.Decimal(5, 2)
  status             AdoptionStatus @default(requested)
  requestedAt        DateTime       @default(now()) @map("requested_at")
  completedAt        DateTime?      @map("completed_at")
  updatedAt          DateTime       @updatedAt @map("updated_at")

  animal   Animal @relation(fields: [animalId], references: [id])
  guardian User   @relation("AdoptionGuardian", fields: [guardianId], references: [id])
  ngo      User?  @relation("AdoptionNgo", fields: [ngoId], references: [id])

  @@unique([animalId, guardianId])
  @@index([animalId, status])
  @@index([guardianId])
  @@map("adoptions")
}

model Occurrence {
  id          String           @id @default(uuid()) @db.Uuid
  userId      String?          @map("user_id") @db.Uuid
  type        OccurrenceType
  description String?
  /// PostGIS geography(Point, 4326) — queries via $queryRaw (ST_DWithin, etc.)
  location    Unsupported("geography(Point, 4326)")
  photos      String[]         @default([])
  status      OccurrenceStatus @default(open)
  validatedBy String?          @map("validated_by") @db.Uuid
  createdAt   DateTime         @default(now()) @map("created_at")
  updatedAt   DateTime         @updatedAt @map("updated_at")

  author    User?                @relation("OccurrenceAuthor", fields: [userId], references: [id])
  validator User?                @relation("OccurrenceValidator", fields: [validatedBy], references: [id])
  followers OccurrenceFollower[]
  reports   OccurrenceReport[]

  @@index([status, type])
  @@index([createdAt])
  @@map("occurrences")
}

model OccurrenceFollower {
  occurrenceId String   @map("occurrence_id") @db.Uuid
  userId       String   @map("user_id") @db.Uuid
  createdAt    DateTime @default(now()) @map("created_at")

  occurrence Occurrence @relation(fields: [occurrenceId], references: [id], onDelete: Cascade)
  user       User       @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@id([occurrenceId, userId])
  @@map("occurrence_followers")
}

model Notification {
  id        String           @id @default(uuid()) @db.Uuid
  userId    String           @map("user_id") @db.Uuid
  type      NotificationType
  message   String
  /// Forward-compatible event data without new columns per notification shape.
  payload   Json?
  read      Boolean          @default(false)
  createdAt DateTime         @default(now()) @map("created_at")
  updatedAt DateTime         @updatedAt @map("updated_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId, read, createdAt])
  @@map("notifications")
}

/// Persist hash only — never plaintext tokens
model RefreshToken {
  id         String     @id @default(uuid()) @db.Uuid
  userId     String     @map("user_id") @db.Uuid
  tokenHash  String     @unique @map("token_hash")
  clientType ClientType @default(unknown) @map("client_type")
  deviceId   String?    @map("device_id")
  userAgent  String?    @map("user_agent")
  revokedAt  DateTime?  @map("revoked_at")
  expiresAt  DateTime   @map("expires_at")
  createdAt  DateTime   @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@index([deviceId])
  @@map("refresh_tokens")
}

model EmailVerificationToken {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  tokenHash String    @unique @map("token_hash")
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("email_verification_tokens")
}

model PasswordResetToken {
  id        String    @id @default(uuid()) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  tokenHash String    @unique @map("token_hash")
  expiresAt DateTime  @map("expires_at")
  usedAt    DateTime? @map("used_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("password_reset_tokens")
}

model DevicePushToken {
  id         String       @id @default(uuid()) @db.Uuid
  userId     String       @map("user_id") @db.Uuid
  platform   PushPlatform
  token      String       @unique
  createdAt  DateTime     @default(now()) @map("created_at")
  updatedAt  DateTime     @updatedAt @map("updated_at")
  lastSeenAt DateTime     @default(now()) @map("last_seen_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId])
  @@map("device_push_tokens")
}

/// Marketing lead from `/register` step 1 (name, email, profile, city/state, LGPD).
/// Step 2 password is validated in the web UI only today and must NOT be persisted here.
/// When identity auth ships: create `User` (+ hash) and optionally link/convert this lead.
model WaitlistEntry {
  id              String              @id @default(uuid()) @db.Uuid
  name            String
  email           String              @unique
  profileType     WaitlistProfileType @map("profile_type")
  city            String?
  state           String?
  lgpdConsentAt   DateTime            @map("lgpd_consent_at")
  createdAt       DateTime            @default(now()) @map("created_at")

  @@index([createdAt])
  @@map("waitlist_entries")
}

model AuditLog {
  id         String      @id @default(uuid()) @db.Uuid
  actorId    String?     @map("actor_id") @db.Uuid
  action     AuditAction
  targetType String?     @map("target_type")
  targetId   String?     @map("target_id") @db.Uuid
  /// Avoid secrets / full PII payloads
  metadata   Json?
  createdAt  DateTime    @default(now()) @map("created_at")

  actor User? @relation("AuditActor", fields: [actorId], references: [id], onDelete: SetNull)

  @@index([actorId, createdAt])
  @@map("audit_logs")
}

model OccurrenceReport {
  id           String                  @id @default(uuid()) @db.Uuid
  occurrenceId String                  @map("occurrence_id") @db.Uuid
  reportedBy   String?                 @map("reported_by") @db.Uuid
  reason       OccurrenceReportReason
  notes        String?
  createdAt    DateTime                @default(now()) @map("created_at")

  occurrence Occurrence @relation(fields: [occurrenceId], references: [id], onDelete: Cascade)
  reporter   User?      @relation("OccurrenceReportAuthor", fields: [reportedBy], references: [id], onDelete: SetNull)

  @@index([occurrenceId])
  @@map("occurrence_reports")
}
