// ANIMAPS — ER diagram for https://dbdiagram.io
// Paste THIS file (docs/der.dbml) into dbdiagram.io — NOT schema.prisma
// Keep in sync with schema.prisma — see schema-evolution.md

Project animaps {
  database_type: 'PostgreSQL'
  Note: 'Responsible adoption + georeferenced animal occurrences. /register is two-step UI: waitlist_entries stores the lead only; password hashes belong on users.password_hash when identity auth ships (never on waitlist).'
}

Enum user_role {
  guardian
  ngo
  clinic
  public_agency
  biologist
}

Enum available_space {
  small_apartment
  large_apartment
  house_with_yard
  farm
}

Enum available_time {
  low
  moderate
  high
}

Enum preferred_size {
  small
  medium
  large
  any
}

Enum preferred_species {
  dog
  cat
  other
  any
}

Enum animal_species {
  dog
  cat
  other
}

Enum animal_size {
  small
  medium
  large
}

Enum animal_status {
  available
  in_process
  adopted
}

Enum adoption_status {
  requested
  under_review
  approved
  rejected
  completed
  cancelled
}

Enum occurrence_type {
  abandonment
  mistreatment
  vehicle_collision
  wildlife_sighting
  lost_animal
  found_animal
}

Enum occurrence_status {
  open
  in_progress
  resolved
  invalid
}

Enum waitlist_profile_type {
  guardian
  ngo
  clinic
  other
}

Enum client_type {
  web
  mobile_ios
  mobile_android
  unknown
}

Enum push_platform {
  ios
  android
}

Enum notification_type {
  user_registered
  ngo_verified
  clinic_verified
  adoption_requested
  adoption_completed
  animal_registered_for_matching
  new_compatible_animal_available
  occurrence_created
  occurrence_status_changed
  occurrence_resolved
  generic
}

Enum audit_action {
  ngo_verified
  clinic_verified
  role_changed
  account_deleted
  data_exported
  occurrence_validated
}

Enum occurrence_report_reason {
  spam
  duplicate
  false_information
  inappropriate_content
}

Table users {
  id uuid [pk]
  name varchar [not null]
  email varchar [unique, not null]
  password_hash varchar [note: 'Email/password register hash (strong password in UI). Nullable for Google/OAuth — app rule: hash OR external identity. Never plaintext.']
  role user_role [not null]
  phone varchar
  city varchar
  state varchar
  lgpd_consent boolean [not null, default: false]
  lgpd_consent_at timestamp
  email_verified_at timestamp
  deleted_at timestamp [note: 'Soft delete / LGPD erasure readiness']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  indexes {
    deleted_at
  }
}

Table guardian_profiles {
  user_id uuid [pk, ref: - users.id]
  available_space available_space
  available_time available_time
  has_previous_experience boolean [not null, default: false]
  has_other_pets boolean [not null, default: false]
  preferred_size preferred_size
  preferred_species preferred_species
  is_rescuer boolean [not null, default: false, note: 'Allows guardian to register animals']
  tax_id varchar [note: 'Individual tax id (e.g. CPF in BR)']
  updated_at timestamp [not null]
}

Table ngo_profiles {
  user_id uuid [pk, ref: - users.id]
  company_tax_id varchar [not null]
  trade_name varchar [not null]
  service_area_radius_km decimal [note: 'PostGIS polygon later; radius is MVP']
  service_capacity int
  verified boolean [not null, default: false]
  updated_at timestamp [not null]
}

Table clinic_profiles {
  user_id uuid [pk, ref: - users.id]
  company_tax_id varchar [not null]
  services_offered "varchar[]" [note: 'vaccination, neutering, emergency_care, grooming']
  business_hours text
  verified boolean [not null, default: false, note: 'Manual validation - same as NGO']
  updated_at timestamp [not null]
}

Table animals {
  id uuid [pk]
  ngo_id uuid [ref: > users.id, note: 'NGO owner user id when applicable']
  guardian_id uuid [ref: > users.id, note: 'Rescuer guardian when applicable']
  clinic_id uuid [ref: > users.id, note: 'Clinic that registered when applicable']
  name varchar [not null]
  species animal_species [not null]
  breed varchar
  estimated_age varchar
  size animal_size
  temperament "varchar[]" [note: 'docile, playful, independent, needs_space, ...']
  health_history text
  photos "text[]" [note: 'MVP object-storage URLs; MediaAsset later']
  status animal_status [not null, default: 'available']
  deleted_at timestamp
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  indexes {
    status
    (species, size)
    deleted_at
  }
}

Table adoptions {
  id uuid [pk]
  animal_id uuid [not null, ref: > animals.id]
  guardian_id uuid [not null, ref: > users.id]
  ngo_id uuid [ref: > users.id, note: 'Origin NGO when applicable']
  compatibility_score decimal [note: '0-100 at request time']
  status adoption_status [not null, default: 'requested']
  requested_at timestamp [not null, default: `now()`]
  completed_at timestamp
  updated_at timestamp [not null]

  indexes {
    (animal_id, guardian_id) [unique]
    (animal_id, status)
    guardian_id
  }
}

Table occurrences {
  id uuid [pk]
  user_id uuid [ref: > users.id, note: 'Nullable = anonymous report']
  type occurrence_type [not null]
  description text
  location geography [not null, note: 'PostGIS geography(Point, 4326); GIST index via raw SQL']
  photos "text[]"
  status occurrence_status [not null, default: 'open']
  validated_by uuid [ref: > users.id, note: 'NGO or public_agency user id']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  indexes {
    (status, type)
    created_at
  }
}

Table occurrence_followers {
  occurrence_id uuid [not null, ref: > occurrences.id]
  user_id uuid [not null, ref: > users.id, note: 'NGO / public_agency / biologist following the case']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (occurrence_id, user_id) [pk]
  }
}

Table notifications {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  type notification_type [not null]
  message text [not null]
  payload jsonb [note: 'Forward-compatible event data']
  "read" boolean [not null, default: false]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]

  indexes {
    (user_id, "read", created_at)
  }
}

Table refresh_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar [unique, not null, note: 'Hash only - never plaintext']
  client_type client_type [not null, default: 'unknown']
  device_id varchar
  user_agent varchar
  revoked_at timestamp
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
    device_id
  }
}

Table email_verification_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar [unique, not null]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
  }
}

Table password_reset_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  token_hash varchar [unique, not null]
  expires_at timestamp [not null]
  used_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id
  }
}

Table device_push_tokens {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  platform push_platform [not null]
  token varchar [unique, not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null]
  last_seen_at timestamp [not null, default: `now()`]

  indexes {
    user_id
  }
}

Table waitlist_entries {
  id uuid [pk]
  name varchar [not null]
  email varchar [unique, not null]
  profile_type waitlist_profile_type [not null]
  city varchar
  state varchar
  lgpd_consent_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]

  Note: '/register step 1 lead only. Do NOT store passwords here — credentials go to users.password_hash when auth ships.'

  indexes {
    created_at
  }
}

Table audit_logs {
  id uuid [pk]
  actor_id uuid [ref: > users.id, note: 'Nullable for system actions']
  action audit_action [not null]
  target_type varchar [note: 'e.g. user, occurrence, animal']
  target_id uuid
  metadata jsonb [note: 'Avoid secrets or full PII payloads']
  created_at timestamp [not null, default: `now()`]

  indexes {
    (actor_id, created_at)
  }
}

Table occurrence_reports {
  id uuid [pk]
  occurrence_id uuid [not null, ref: > occurrences.id]
  reported_by uuid [ref: > users.id, note: 'Nullable if anonymous']
  reason occurrence_report_reason [not null]
  notes text
  created_at timestamp [not null, default: `now()`]

  indexes {
    occurrence_id
  }
}

TableGroup identity {
  users
  guardian_profiles
  ngo_profiles
  clinic_profiles
  refresh_tokens
  email_verification_tokens
  password_reset_tokens
  device_push_tokens
}

TableGroup adoption {
  animals
  adoptions
}

TableGroup occurrence {
  occurrences
  occurrence_followers
  occurrence_reports
}

TableGroup notifications {
  notifications
}

TableGroup marketing {
  waitlist_entries
}

TableGroup audit {
  audit_logs
}
